test/libsolidity/syntaxTests/modifiers/use_in_invalid_context.sol
contract test {
    modifier mod() { _; }

    function f() public {
        mod  ;
    }
}
// ----
// TypeError 3112: (77-80='mod'): Modifier can only be referenced in function headers.
